style fix modal theme color bug and checkout page layout bug

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -10,6 +10,10 @@
   z-index:999;
   align-items: center;
   text-align: center;
+  @include themeGen() {
+    background-color: getThemeVal("primary");
+    color: getThemeVal("secondary");
+  }
 
   .navbar{
     &__collapse{
